--- a/catalog.html
+++ b/catalog.html
@@ -4,41 +4,48 @@
 	<meta charset="UTF-8">
 
 	<!-- ссылка на подключение CSS файла -->
+	<link rel="stylesheet" href="css/normalize.css">
+
+	<!-- ссылка на подключение CSS файла -->
 	<link rel="stylesheet" href="css/style.css">
 
 	<!-- ссылка на шрифт -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
-
-	<!-- ссылка на подключение CSS файла -->
-	<link rel="stylesheet" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap&subset=cyrillic" rel="stylesheet">
 
 	<title>Document</title>
 </head>
+
 <body>
-	<header class="header">
-		<a href="index.html">
-			<img src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
-		</a>
-		<nav>
-			<a href="#">Студия</a>
-			<a href="#">Клиенты</a>
-			<a href="catalog.html">Магазин</a>
-			<a href="#">Контакты</a>
-		</nav>
-		<div>
-			<img src="img/icons/cart-icon.svg" alt="Корзина">
-			<a href="#">Корзина</a>
-		</div>		
+	<header class="header header-block">
+		<div class="container">
+			<div class="header">
+				<a class="logo--link" href="index.html">
+					<img src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
+				</a>
+				<nav class="nav">
+					<a class="header--link" href="index.html">Студия</a>
+					<a class="header--link" href="#">Клиенты</a>
+					<a class="header--link nav--open--link" href="catalog.html">Магазин</a>
+					<a class="header--link" href="#">Контакты</a>
+				</nav>
+				<div class="basket">
+					<img src="img/icons/cart-icon.svg" alt="Корзина">
+					<a class="header--link" href="#">Корзина</a>
+				</div>	
+			</div>
+		</div>	
 	</header>
 
-	<main>
-		<section>
-			<div class="catalog_title">
-				<h1 class="catalog_title">Магазин готовых шаблонов</h1>
+	<main>	
+		<div class="main--header">	
+			<div class="container">
+				<div class="catalog--title">
+					<h1>Магазин готовых шаблонов</h1>
+				</div>
 			</div>
-
-			<div>
-				<aside>
+		</div>
+		<div class="container main--main">
+				<aside class="aside">
 					<form action="https://echo.htmlacademy.ru">						
 						<fieldset class="grid_block">
 							<legend class="grid_title">Сетка:</legend>
@@ -72,120 +79,160 @@
 						<button type="submit" class="btn">Отправить</button>
 					</form>
 				</aside>
-				<ul>
-					<li>
-						<img src="img/catalog/browser.svg" alt="Информационный сайт для туристов">
-						<img src="img/catalog/1.jpg" alt="Шаблон сайта Sedona">
+				<div>
+					<div class="sort">
+						<div>
+							
+						</div>
+						<div>
+							<div class="test">
+							<button>По цене</button></div>
+							<button>по типу</button>
+							<button>по названию</button>
+							<input name="" type="radio">
+							<input name="" type="radio">
+						</div>
+					</div>
+					<ul class="products">
+						<li class="products--pattern">
+							<div class="pattern--img">
+								<img class="pattern--img--head" src="img/catalog/browser.svg" alt="Информационный сайт для туристов">
+								<img class="pattern--img--body" src="img/catalog/1.jpg" alt="Шаблон сайта Sedona">
+							</div>
+							<div class="pattern--price">
+								<h3 class="price--title">Sedona</h3>
+								<p class="price--suptitle">Информационный сайт для туристов</p>
+								<button class="price--button">9 900 руб.</button>
+							</div>						
+						</li>
 
-						<div class="card_link">
-							<h3 class="card_title">Sedona</h3>
-							<p>Информационный сайт для туристов</p>
-							<a href="#">9 900 руб.</a>
-						</div>						
-					</li>
-					<li>
-						<img src="img/catalog/browser.svg" alt="Продуктовый лендинг приложения для iOS и Android">
-						<img src="img/catalog/2.jpg" alt="Шаблон лендинга Pink app">
+						<li class="products--pattern--right">
+							<div class="pattern--img">
+								<img class="pattern--img--head" src="img/catalog/browser.svg" alt="Продуктовый лендинг приложения для iOS и Android">
+								<img class="pattern--img--body" src="img/catalog/2.jpg" alt="Шаблон лендинга Pink app">
+							</div>
+							<div class="card_link">
+								<h3 class="price--title">Pink app</h3>
+								<p class="price--suptitle">Продуктовый лендинг приложения для iOS и Android</p>
+								<button class="price--button">9 900 руб.</button>
+							</div>						
+						</li>
 
-						<div class="card_link">
-							<h3 class="card_title">Pink app</h3>
-							<p>Продуктовый лендинг
-							   приложения для iOS и Android</p>
-							<a href="#">9 900 руб.</a>
-						</div>						
-					</li>
-					<li>
-						<img src="img/catalog/browser.svg" alt="Сайт салона красоты">
-						<img src="img/catalog/3.jpg" alt="Шаблон сайта салона красоты Barbershop">
-
-						<div class="card_link">
-							<h3 class="card_title">Barbershop</h3>
-							<p>Сайт салона красоты.
-							   Для мужчин, да.</p>
-							<a href="#">9 900 руб.</a>
-						</div>						
-					</li>
-					<li>
-						<img src="img/catalog/browser.svg" alt="интернет-магазина игрушек">
-						<img src="img/catalog/4.jpg" alt="Шаблон интернет-магазина игрушек Mishka">
-
-						<div class="card_link">
-							<h3 class="card_title">Mishka</h3>
-							<p>тернет-магазин
-							   вязаных игрушек</p>
-							<a href="#">9 900 руб.</a>
-						</div>						
-					</li>
-					<li>
-						<img src="img/catalog/browser.svg" alt="Лендинг курсов повышения квалификации">
-						<img src="img/catalog/5.jpg" alt="Шаблон лендинга курсов повышения квалификации A Plus">
-
-						<div class="card_link">
-							<h3 class="card_title">A Plus</h3>
-							<p>Лендинг курсов повышения
-					   		   квалификации</p>
-							<a href="#">9 900 руб.</a>
-						</div>						
-					</li>
-					<li>
-						<img src="img/catalog/browser.svg" alt="Промо-сайт производителя кваса">
-						<img src="img/catalog/6.jpg" alt="Шаблон промо-сайта производителя крафтового кваса Кваст">
-
-						<div class="card_link">
-							<h3 class="card_title">Кваст</h3>
-							<p>Промо-сайт производителя
-							   крафтового кваса</p>
-							<a href="#">9 900 руб.</a>
-						</div>						
-					</li>
-				</ul>
-			</div>
-		</section>
-		
+						<li class="products--pattern">
+							<div class="pattern--img">
+								<img class="pattern--img--head" src="img/catalog/browser.svg" alt="Сайт салона красоты">
+								<img class="pattern--img--body" src="img/catalog/3.jpg" alt="Шаблон сайта салона красоты Barbershop">
+							</div>
+							<div class="card_link">
+								<h3 class="price--title">Barbershop</h3>
+								<p class="price--suptitle">Сайт салона красоты.
+								   Для мужчин, да.</p>
+								<button class="price--button">9 900 руб.</button>
+							</div>						
+						</li>
+						<li class="products--pattern--right">
+							<div class="pattern--img">
+								<img class="pattern--img--head" src="img/catalog/browser.svg" alt="интернет-магазина игрушек">
+								<img class="pattern--img--body" src="img/catalog/4.jpg" alt="Шаблон интернет-магазина игрушек Mishka">
+							</div>
+							<div class="card_link">
+								<h3 class="price--title">Mishka</h3>
+								<p class="price--suptitle">тернет-магазин
+								   вязаных игрушек</p>
+								<button class="price--button">9 900 руб.</button>
+							</div>						
+						</li>
+						<li class="products--pattern">
+							<div class="pattern--img">
+								<img class="pattern--img--head" src="img/catalog/browser.svg" alt="Лендинг курсов повышения квалификации">
+								<img class="pattern--img--body" src="img/catalog/5.jpg" alt="Шаблон лендинга курсов повышения квалификации A Plus">
+							</div>
+							<div class="card_link">
+								<h3 class="price--title">A Plus</h3>
+								<p class="price--suptitle">Лендинг курсов повышения
+						   		   квалификации</p>
+								<button class="price--button">9 900 руб.</button>
+							</div>						
+						</li>
+						<li class="products--pattern--right">
+							<div class="pattern--img">
+								<img class="pattern--img--head" src="img/catalog/browser.svg" alt="Промо-сайт производителя кваса">
+								<img class="pattern--img--body" src="img/catalog/6.jpg" alt="Шаблон промо-сайта производителя крафтового кваса Кваст">
+							</div>
+							<div class="card_link">
+								<h3 class="price--title">Кваст</h3>
+								<p class="price--suptitle">Промо-сайт производителя
+								   крафтового кваса</p>
+								<button class="price--button">9 900 руб.</button>
+							</div>						
+						</li>
+					</ul>
+				</div>
+		</div>		
 	</main>
 
 	<footer class="footer">
-		<div class="footer_feedback">
-			<!-- в action вписать адрес на который будет поступать информация в форме после нажатия на кнпку "отправить" -->
-			<form action="https://echo.htmlacademy.ru" >
-			    <h2 class="footer_feedback_title">Напишите нам</h2>
-			    <button type="button" class="btn cancel" onclick="closeForm()">Закрыть</button>
-			    <div>
-				    <label for="name">Ваше имя:</label>
-				    <input id="name" type="text" placeholder="Имя Фамилия" name="name" required>
+		<div class="footer--feedback">
+			<div class="container where">			
+				<div class="feedback--adress">
+					<h3 class="feedback--adress--title">NЁRDS DESIGN STUDIO</h3>
+					<p class="paragraph feedback--adress--suptitle">
+						191186, Санкт-Петербург, 
+						ул. Б. Конюшенная, д. 19/8
+						<br><br>
+						тел. +7 (812) 275-75-75</p>
+					<button class="button button--red">Напишите нам</button>
 				</div>
-			    <div>
-				    <label for="email">Ваш e-mail:</label>
-				    <input id="email" type="text" placeholder="email@example.com" name="e-mail" required>
+				<form class="feedback--form" action="https://echo.htmlacademy.ru" >
+				    <h2 class="feedback--title">Напишите нам</h2>
+				    <button type="button" class="cancel" onclick="closeForm()">Закрыть</button>
+				    <div>
+					    <label for="name">Ваше имя:</label>
+					    <input id="name" type="text" placeholder="Имя Фамилия" name="name" required>
+					</div>
+				    <div>
+					    <label for="email">Ваш e-mail:</label>
+					    <input id="email" type="text" placeholder="email@example.com" name="e-mail" required>
+					</div>
+				    <div>
+					    <label for="text_mail">Текст вашего письма:</label>
+					    <textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="10"></textarea>
+					</div>
+				    <button type="submit" class="button send">Отправить</button>
+				</form>
+			</div>
+			<!-- <div class="container">
+				<div>
+					в action вписать адрес на который будет поступать информация в форме после нажатия на кнпку "отправить"
+					
 				</div>
-			    <div>
-				    <label for="text_mail">Текст вашего письма:</label>
-				    <textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="10"></textarea>
-				</div>
-			    <button type="submit" class="btn">Отправить</button>
-			  </form>
+			</div> -->
 		</div>
-		<ul class="footer_social">
-			<li>
-				<a href="#">
-					<svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
-				</a>
-			</li>			
-			<li>
-				<a href="#">
-					<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
-				</a>
-			</li>			
-			<li>
-				<a href="#">
-					<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
-				</a>
-			</li>
-		</ul>
-		<div>
-			<h3 class="footer_title">Давайте дружить, это выгодно!</h3>
-			<p>Скидка 10% для друзей из социальных сетей.</p>
-		</div>		
+			<div class="container">
+				<div class="footer--social">
+					<ul class="social--icons">
+						<li class="list">
+							<a href="#">
+								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
+							</a>
+						</li>			
+						<li class="list">
+							<a href="#">
+								<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+							</a>
+						</li>			
+						<li class="list">
+							<a href="#">
+								<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+							</a>
+						</li>
+					</ul>
+					<div class="footer--text">
+						<h3 class="footer--title">Давайте дружить, это выгодно!</h3>
+						<p class="paragraph footer--suptitle">Скидка 10% для друзей из социальных сетей.</p>
+					</div>	
+				</div>				
+			</div>	
 	</footer>
 </body>
 </html>
